# murder_mystery_game

./: .coverage  .gitignore  README.md  app.py  main.py  pyproject.toml
src/murder_mystery_game.egg-info/: PKG-INFO  SOURCES.txt
src/mysterium/: __init__.py  cli.py  game.py  utils.py
src/mysterium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mysterium/models/: __init__.py  clue.py  player.py  room.py  suspect.py  weapon.py
tests/: __init__.py  test_clue.py  test_game.py  test_player.py  test_room.py  test_suspect.py  test_weapon.py
